fixed hover state on mobile, added white space between .pass_fail

--- a/dev/css/syria_vote.less
+++ b/dev/css/syria_vote.less
@@ -1,7 +1,7 @@
 /* House and Senate whip vote tracker global styles */
 
 .pass_fail {
-	margin-bottom: 5em;	
+	margin-bottom: 7em;	
 	font-family: "Trebuchet MS", Helvetica, sans-serif;
 		
 }
@@ -327,6 +327,8 @@ and (max-width: 480px) {
 	#party_picker, #senate_party_picker {
 		display: inline;
 		margin-bottom: 2em;
+		left: 0;
+		margin-left: 0;
 	}
 	
 	#party_picker button, #senate_party_picker button, #play_times {
